--- a/README
+++ b/README
@@ -1,2 +1,4 @@
+It's very easy to make some words **bold** and other words *italic* with Markdown. You can even [link to Google!](http://google.com)
+
 qui tutta la descrizione del progetto e link a licenza ed altri reposity o altro
 paragrafo aggiunto
